# jigsaw

./: .gitignore  TODO.md  inference.py  pyproject.toml
data/: dataset.csv
data/ds_legal_advice_eval.ds/: data-00000-of-00001.arrow  state.json
data/ds_legal_advice_train.ds/: cache-83021f98f2e246c0.arrow  cache-97f1f1472bdd2336.arrow  data-00000-of-00001.arrow  state.json
data/ds_no_examples.ds/: data-00000-of-00001.arrow  state.json
data/ds_no_examples_eval.ds/: data-00000-of-00001.arrow  state.json
data/ds_no_examples_test.ds/: data-00000-of-00001.arrow  state.json
data/ds_no_examples_train.ds/: cache-198d53837d726f0b.arrow  cache-b184634cc0c7f6ff.arrow  cache-d38a94293c0f6c1f.arrow  data-00000-of-00001.arrow  state.json
data/ds_spam_eval.ds/: data-00000-of-00001.arrow  state.json
data/ds_spam_train.ds/: cache-7defbf548a0bef9c.arrow  cache-e198a76529beec1c.arrow  data-00000-of-00001.arrow  state.json
notebooks/: berts.ipynb  build_dataset.ipynb  eda.ipynb  eval.ipynb  test_qwen3-05B.ipynb  train.ipynb  unsloth.ipynb
src/jigsaw/: __init__.py  settings.py
