[project]
name = "jigsaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felix Neumann", email = "felix.maximilian.neumann@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
jigsaw = "jigsaw:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
