[project]
name = "jigsaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felix Neumann", email = "felix.maximilian.neumann@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.48.1",
    "datasets>=4.2.0",
    "ipykernel==6.30.1",
    "jupyter>=1.1.1",
    "logits-processor-zoo>=0.2.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "trl>=0.24.0",
    "unsloth>=2025.7.2",
    "unsloth-zoo>=2025.7.4",
    "vllm==0.10.0",
    "wandb>=0.22.2",
]

[project.scripts]
jigsaw = "jigsaw:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
